force-app/main/default/objects/Case/fields/Customer_Question__c.field-meta.xml
<CustomField>
    <fullName>Customer_Question__c</fullName>
    <label>Customer Question</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Free-form customer message to practice Agentforce triage and response.</description>
</CustomField>