force-app/main/default/objects/Case/fields/Customer_Sentiment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Sentiment__c</fullName>
    <label>Customer Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Negative</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
                <default>true</default>
                <label>Neutral</label>
            </value>
            <value>
                <fullName>Positive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>