force-app/main/default/objects/Case/fields/Preferred_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Resolution__c</fullName>
    <label>Preferred Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Status_Update</fullName>
                <default>true</default>
                <label>Status Update</label>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>