force-app/main/default/objects/Case/fields/Related_Order__c.field-meta.xml
<CustomField>
    <fullName>Related_Order__c</fullName>
    <label>Related Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Order_Cases</relationshipName>
    <description>Order this case is about (for “Where is my order?” triage).</description>
</CustomField>